kubernetes/apps/foundryvtt/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: foundryvtt
  labels:
    name: foundryvtt
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/enforce-version: latest
