kubernetes/apps/foundryvtt/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: foundryvtt
  name: foundryvtt
  labels:
    app: foundryvtt
    foundryvtt.petebeegle.com/color: blue

spec:
  replicas: 1
  selector:
    matchLabels:
      app: foundryvtt
  template:
    metadata:
      labels:
        app: foundryvtt
        foundryvtt.petebeegle.com/color: blue
    spec:
      securityContext:
        runAsUser: 421
        runAsGroup: 421
        fsGroup: 421
      containers:
        - name: foundryvtt
          image: felddy/foundryvtt:14.368
          imagePullPolicy: IfNotPresent
          ports:
            - name: web
              containerPort: 30000
          volumeMounts:
            - name: foundryvtt-data-persistent-storage
              mountPath: /data
          resources:
            requests:
              memory: "1Gi"
              cpu: "500m"
            limits:
              memory: "4Gi"
              cpu: "1"
      volumes:
        - name: foundryvtt-data-persistent-storage
          persistentVolumeClaim:
            claimName: foundryvtt-data-pvc
