kubernetes/apps/foundryvtt/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: foundryvtt
  labels:
    name: foundryvtt
  namespace: foundryvtt
spec:
  selector:
    app: foundryvtt
    foundryvtt.petebeegle.com/color: blue
  ports:
    - name: web
      port: 80
      targetPort: 30000
