kubernetes/apps/foundryvtt/httproute-public.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: foundryvtt-public
  namespace: foundryvtt
spec:
  parentRefs:
    - name: public
      namespace: gateway
      sectionName: http-gateway
  hostnames:
    - foundry2.petebeegle.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: foundryvtt
          port: 80
          weight: 1
