kubernetes/apps/foundryvtt/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: foundryvtt
  namespace: foundryvtt
spec:
  parentRefs:
    - name: internal
      namespace: gateway
      sectionName: https-gateway
  hostnames:
    - foundry.${cluster_domain}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - name: foundryvtt
          port: 80
          weight: 1
